--- a/templates/add_lesson.html
+++ b/templates/add_lesson.html
@@ -35,11 +35,11 @@
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNav">
                             <ul class="navbar-nav">
-                                <li class="nav-item active">
-                                    <a class="nav-link" href="/modify_lessons">Lektion bearbeiten</a>
+                                <li class="nav-item ">
+                                    <a class="nav-link active" href="/modify_lessons">Lektion bearbeiten</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Benutzer bearbeiten</a>
+                                    <a class="nav-link" href="/modify_users">Benutzer bearbeiten</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="/modify_subjects">Fächer bearbeiten</a>
