--- a/templates/create_schooltype.html
+++ b/templates/create_schooltype.html
@@ -21,19 +21,19 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="/modify_lessons">Modify Lesson</a>
+                <li class="nav-item ">
+                    <a class="nav-link" href="/modify_lessons">Lektion bearbeiten</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Modify Users</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="/modify_subjects">Modify Subjects</a>
+                    <a class="nav-link" href="/modify_users">Benutzer bearbeiten</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/modify_family">Modify Family</a>
+                    <a class="nav-link active" href="/modify_subjects">Fächer bearbeiten</a>
                 </li>
-                <!-- Add more links as needed -->
+                <li class="nav-item">
+                    <a class="nav-link" href="/modify_family">Familie bearbeiten</a>
+                </li>
+                <!-- Weitere Links hinzufügen, falls erforderlich -->
             </ul>
         </div>
     </nav>
