--- a/templates/modify_family.html
+++ b/templates/modify_family.html
@@ -29,11 +29,11 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="/modify_lessons">Unterricht bearbeiten</a>
+                <li class="nav-item ">
+                    <a class="nav-link" href="/modify_lessons">Lektion bearbeiten</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Benutzer bearbeiten</a>
+                    <a class="nav-link" href="/modify_users">Benutzer bearbeiten</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/modify_subjects">Fächer bearbeiten</a>
@@ -41,7 +41,7 @@
                 <li class="nav-item">
                     <a class="nav-link active" href="/modify_family">Familie bearbeiten</a>
                 </li>
-                <!-- Fügen Sie bei Bedarf weitere Links hinzu -->
+                <!-- Weitere Links hinzufügen, falls erforderlich -->
             </ul>
         </div>
     </nav>
