--- a/templates/modify_subjects.html
+++ b/templates/modify_subjects.html
@@ -21,14 +21,14 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item active">
+                <li class="nav-item ">
                     <a class="nav-link" href="/modify_lessons">Lektion bearbeiten</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="/modify_users">Benutzer bearbeiten</a>
+                    <a class="nav-link" href="/modify_users">Benutzer bearbeiten</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/modify_subjects">Fächer bearbeiten</a>
+                    <a class="nav-link active" href="/modify_subjects">Fächer bearbeiten</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/modify_family">Familie bearbeiten</a>
