--- a/templates/create_schooltype.html
+++ b/templates/create_schooltype.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Add Schooltype</title>
+    <title>Schultyp hinzufügen</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <!-- Add any additional CSS files here -->
+    <!-- Fügen Sie hier zusätzliche CSS-Dateien hinzu -->
     <style>
         .fc-day-grid-event .fc-content {
             white-space: normal;
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.min.css" />
 </head>
 <body>
-    <!-- Navigation Bar -->
+    <!-- Navigationsleiste -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="/admin_dashboard">Admin Panel</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,11 +38,11 @@
         </div>
     </nav>
     <div class="container mt-4">
-        <h2>Add School Type</h2>
+        <h2>Schultyp hinzufügen</h2>
         <form action="{{ url_for('add_schooltype') }}" method="post">
-            <label for="schooltype_name">School Type Name:</label>
+            <label for="schooltype_name">Schultyp Name:</label>
             <input type="text" id="schooltype_name" name="schooltype_name" required><br>
-            <input type="submit" value="Add School Type" class="btn btn-primary">
+            <input type="submit" value="Schultyp hinzufügen" class="btn btn-primary">
         </form>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
