--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -9,7 +9,7 @@
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Tutoren Kabinett</a>
+        <a class="navbar-brand" href="/tutor_profile">Tutoren Kabinett</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -31,18 +31,18 @@
         </div>
     </nav>
 
-    <!-- Password Form -->
+    <!-- Passwort-Formular -->
     <form action="/tutor/change_password" method="POST">
-        <label for="old_password">Old Password:</label>
+        <label for="old_password">Altes Passwort:</label>
         <input type="password" id="old_password" name="old_password" required><br><br>
         
-        <label for="new_password">New Password:</label>
+        <label for="new_password">Neues Passwort:</label>
         <input type="password" id="new_password" name="new_password" required><br><br>
         
-        <label for="repeat_password">Repeat Password:</label>
+        <label for="repeat_password">Passwort wiederholen:</label>
         <input type="password" id="repeat_password" name="repeat_password" required><br><br>
         
-        <button type="submit" class="btn btn-primary">Change Password</button>
+        <button type="submit" class="btn btn-primary">Passwort ändern</button>
     </form>
     
 
