--- a/templates/modify_family.html
+++ b/templates/modify_family.html
@@ -66,7 +66,7 @@
                     <ul class="list-group mt-2">
                         {% for student in family.students %}
                         <li class="list-group-item">
-                            {{ student.FirstName }} {{ student.LastName }} - {{ student.DateOfBirth }}
+                            {{ student.FirstName }} {{ student.LastName }}   |   {{ student.DateOfBirth }}     |    {{ student.phone_num }}
                             <a href="{{ url_for('edit_student', student_id=student.StudentID) }}" class="btn btn-secondary btn-sm">Schüler bearbeiten</a>
                         </li>
                         {% endfor %}
